syntax = "proto3";

option csharp_namespace = "CrudClient.Grpc.Order";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
package orderToItem;

service OrderService{
	rpc GetOrder(GetOrderRequest)returns(OrderReply);
	rpc GerListOrder(google.protobuf.Empty)returns(ListOrderReply);
}
message GetOrderRequest{
	int32 id =1;
}

message OrderReply{
	int32 id =1;
	int32 idOrder = 2;
}

message ListOrderReply{
	repeated OrderReply order = 1;
}
